Add admin panel with registered user's configuration

--- a/app/src/main/res/layout/activity_admin_panel.xml
+++ b/app/src/main/res/layout/activity_admin_panel.xml
@@ -80,7 +80,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="28dp"
                 android:fontFamily="@font/mmedium"
-                android:text="DENNI RAMADIANTO"
+                android:text=".........."
                 android:textColor="#FFF"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/view5"
@@ -93,7 +93,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/mlight"
-                android:text="Admin"
+                android:text=".........."
                 android:textColor="#FFF"
                 android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/view5"
