--- a/app/src/main/res/layout/activity_booking_history.xml
+++ b/app/src/main/res/layout/activity_booking_history.xml
@@ -34,7 +34,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginRight="24dp"
@@ -45,6 +45,7 @@
         android:paddingTop="30dp"
         android:paddingRight="24dp"
         android:paddingBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_mydashboard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nama_lengkap">
