--- a/app/src/main/res/layout/activity_graha_detail.xml
+++ b/app/src/main/res/layout/activity_graha_detail.xml
@@ -202,7 +202,93 @@
                     android:textColor="@color/GrayPrimary"
                     android:textSize="12sp" />
             </LinearLayout>
+
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@color/grayline" />
+
+        <LinearLayout
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:src="@drawable/ic_harga"
+                android:layout_width="55dp"
+                android:layout_height="55dp"/>
+
+            <LinearLayout
+                android:layout_marginTop="6dp"
+                android:layout_marginLeft="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/mregular"
+                    android:text="@string/pricelabel"
+                    android:textColor="@color/blackPrimary"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/harga_booking"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/mmedium"
+                    android:text="Rp. .........."
+                    android:textColor="@color/orangeprimary"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:src="@drawable/ic_slot"
+                android:layout_width="55dp"
+                android:layout_height="55dp"/>
+
+            <LinearLayout
+                android:layout_marginTop="6dp"
+                android:layout_marginLeft="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/mregular"
+                    android:text="@string/slot"
+                    android:textColor="@color/blackPrimary"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/slot"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/mmedium"
+                    android:text=".......... Unit"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/detail_graha"
