--- a/app/src/main/res/layout/mp_listgraha.xml
+++ b/app/src/main/res/layout/mp_listgraha.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgPrimary"
-    tools:context=".MarketingPanelListUser">
+    tools:context=".MarketingPanelListGraha">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:fontFamily="@font/mregular"
-                android:text="@string/userlist"
+                android:text="@string/grahalist"
                 android:textAlignment="center"
                 android:textColor="#FFF"
                 android:textSize="24sp"
@@ -69,7 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/mregular"
-                    android:text="@string/topupmenu"
+                    android:text="@string/grahamenu"
                     android:textColor="@color/blackPrimary"
                     android:textSize="20sp" />
 
@@ -78,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:fontFamily="@font/mlight"
-                    android:text="@string/userlistdesc2"
+                    android:text="@string/grahalistdesc"
                     android:textColor="@color/GrayPrimary"
                     android:textSize="16sp" />
 
@@ -90,7 +90,7 @@
                     android:background="@color/grayline" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/userlist_place"
+                    android:id="@+id/grahalist_place"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -102,13 +102,14 @@
                 android:id="@+id/progressBar"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_marginTop="170dp"
-                android:layout_marginEnd="48dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="24dp"
                 android:visibility="visible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
     <Button
         android:id="@+id/btn_back"
         android:layout_width="27dp"
@@ -118,5 +119,24 @@
         android:background="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
